deploy/Nginx_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 837318114635.dkr.ecr.us-east-1.amazonaws.com/recipe-app-api-proxy-final:latest

        ports:
        - containerPort: 8000

        volumeMounts:
        - name: static
          mountPath: /vol/static
          readOnly: true
        - name: media
          mountPath: /vol/media
          readOnly: true

      volumes:
      - name: static
        persistentVolumeClaim:
          claimName: efs-pvc-static

      - name: media
        persistentVolumeClaim:
          claimName: efs-pvc
