deploy/django_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: 837318114635.dkr.ecr.us-east-1.amazonaws.com/recipe-app-api-app-final:new
        ports:
        - containerPort: 9000

        volumeMounts:
        - name: static
          mountPath: /vol/web/static
        - name: media
          mountPath: /vol/web/media

      volumes:
      - name: static
        persistentVolumeClaim:
          claimName: efs-pvc-static

      - name: media
        persistentVolumeClaim:
          claimName: efs-pvc
