deploy/Nginx_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: nginx
