deploy/django.yaml
# ========================
# Django Service
# ========================
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app: django
spec:
  type: LoadBalancer
  selector:
    app: django
    tier: app
  ports:
    - port: 8000
#       targetPort: 8000
#       protocol: TCP

---





---

# # ========================
# # Deployment
# # ========================

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
      tier: app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: django
        tier: app
    spec: 
#       imagePullSecrets:
#         - name: ecr-secret
      volumes:
        - name: static
          emptyDir: {}
        - name: efs-media
          persistentVolumeClaim:
            claimName: efs-media-pvc
      containers:
        # --------------------
        # Django App Container
        # --------------------
        - name: app
          ports:
            - containerPort: 9000
              name: app
          image: 029179923871.dkr.ecr.eu-west-2.amazonaws.com/django-k8s-app-eks:latest
          imagePullPolicy: Always
          # ports:
          #   - containerPort: 8000  # Django internal port
          volumeMounts:
            - name: static
              mountPath: /vol/web/static
            - name: efs-media
              mountPath: /vol/web/media
        - name: proxy
          image: 029179923871.dkr.ecr.eu-west-2.amazonaws.com/django-k8s-proxy-eks:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000   # Nginx container port
              name: proxy
          volumeMounts:
            - name: static
              mountPath: /vol/static
              readOnly: true
            - name: efs-media
              mountPath: /vol/media
              readOnly: true
